<resources>
    <string name="app_name">My Training</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="treinos">Treinos</string>
    <string name="exercicios">Exercícios</string>
    <string name="Perfil">Perfil</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="imagem_do_perfil">Imagem do perfil</string>
    <string name="adicionar_foto">Adicionar foto</string>
    <string name="nome_do_usu_rio">Nome do usuário</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="mascara_senha">**********</string>
    <string name="sair">Sair</string>
    <string name="excluir_conta">Excluir conta</string>
    <string name="editar">Editar</string>
    <string name="adicionar_exercicio">Adicionar exercício</string>
    <string name="meus_treinos">Meus Treinos</string>
    <string name="adicionar_treino">Adicionar treino</string>
    <string name="endereco_de_e_mail">Endereço de e-mail</string>
    <string name="senha_de_acesso">Senha de acesso</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="verifique_seu_e_mail">Verifique seu e-mail para completar o cadastro. Foi enviado um e-mail para o endereço cadastro com um link de confirmação.</string>
    <string name="verifiquei">Verifiquei</string>
    <string name="nao_recebi_o_email">Não recebi o e-mail</string>
    <string name="alterar_foto_de_perfil">Alterar foto de perfil</string>
    <string name="excluir">Excluir</string>
    <string name="galeria">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="insira_sua_senha_atual">Insira sua senha atual</string>
    <string name="digite_sua_senha_atual">Digite sua senha atual</string>
    <string name="insira_sua_nova_senha">Insira sua nova senha</string>
    <string name="digite_sua_nova_senha">Digite sua nova senha</string>
    <string name="confirme_a_nova_senha">Confirme a nova senha</string>
    <string name="atencao">Atenção: Essa operação não pode ser desfeita!</string>
    <string name="imagem">Imagem</string>
    <string name="descricao">Descrição</string>
    <string name="treino">Treino: </string>
    <string name="exercicio">Exercício: </string>
    <string name="imagem_do_treino">Imagem do Treino</string>
    <string name="observacoes">Observações</string>
    <string name="numero_do_exercicio">Número do Exercício</string>
    <string name="numero_do_treino">Número do Treino</string>
    <string name="selecione_exercicios">Selecione os exercícios do treino:</string>
    <string name="logotipo">Logotipo</string>
    <string name="carta">Carta</string>
    <string name="check">Check</string>
</resources>