<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/alterar_foto_de_perfil"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBtnExcluirFoto"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/excluir"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_delete" />

        <ImageButton
            android:id="@+id/imgBtnGaleria"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/galeria"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_gallery" />

        <ImageButton
            android:id="@+id/imgBtnCamera"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/camera"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_camera" />

    </LinearLayout>

</LinearLayout>