<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.fragment.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pgPerfil"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:indeterminate="true"
            android:theme="@style/ProgressBarStyle"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvExercicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/meu_perfil"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvVisualizarFoto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="400dp"
                app:cardElevation="2dp">

                <ImageView
                    android:id="@+id/imgPerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imagem_do_perfil"
                    android:elevation="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_default" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAlterarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/cvVisualizarFoto"
                android:layout_alignBottom="@+id/cvVisualizarFoto"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:contentDescription="@string/adicionar_foto"
                android:focusable="true"
                app:srcCompat="@drawable/ic_baseline_photo_camera" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvLabelNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_do_usu_rio"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLabelNome"
                android:layout_toStartOf="@+id/imgBtnEditarNome"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/imgBtnEditarNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/editar"
                android:padding="6dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_edit" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvLabelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLabelEmail"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tvLabelSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLabelSenha"
                android:layout_toStartOf="@+id/imgBtnEditarSenha"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/mascara_senha"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/imgBtnEditarSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/editar"
                android:padding="6dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_baseline_edit" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="16dp"
            android:text="@string/sair" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/danger"
            android:padding="16dp"
            android:text="@string/excluir_conta" />

    </LinearLayout>

</ScrollView>