<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activity.MainActivity">

    <ProgressBar
        android:id="@+id/pgLogin"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-7dp"
        android:layout_marginBottom="16dp"
        android:indeterminate="true"
        android:theme="@style/ProgressBarStyle"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:adjustViewBounds="true"
            android:alpha="0.6"
            app:srcCompat="@drawable/ic_peso"
            android:contentDescription="@string/logotipo" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="bottom"
            android:singleLine="false"
            android:textColorHint="@color/white"
            android:theme="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco_de_e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="bottom"
            android:singleLine="false"
            android:textColorHint="@color/white"
            android:theme="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSenhaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_de_acesso"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/green"
            android:padding="16dp"
            android:text="@string/entrar" />

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:text="@string/cadastrar_se" />

    </LinearLayout>

</RelativeLayout>