<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.activity.CadastroExercicioActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCadastroExercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_baseline_arrow_back"
        app:title="Cadastro de Exercício" />

    <ProgressBar
        android:id="@+id/pgCadastroExercico"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:layout_marginBottom="16dp"
        android:indeterminate="true"
        android:theme="@style/ProgressBarStyle"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvVisualizarFoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">

            <ImageView
                android:id="@+id/imgExercicio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imagem_do_treino"
                android:elevation="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/imagem_padrao" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAlterarFotoExercicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/cvVisualizarFoto"
            android:layout_alignBottom="@+id/cvVisualizarFoto"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:clickable="true"
            android:contentDescription="@string/adicionar_foto"
            android:focusable="true"
            app:srcCompat="@drawable/ic_baseline_photo_camera" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom"
        android:hint="@string/numero_do_treino"
        android:singleLine="false"
        android:textColorHint="@color/white"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNomeCadastroExercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom"
        android:hint="@string/observacoes"
        android:singleLine="false"
        android:textColorHint="@color/white"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtObservacoesCadastroExercico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="300"
            android:maxLines="12"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastroExercico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/cadastrar" />

</LinearLayout>