<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.activity.CadastroUsuarioActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_baseline_arrow_back"
        app:title="Cadastro" />

    <ProgressBar
        android:id="@+id/pgCadastro"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:layout_marginBottom="16dp"
        android:indeterminate="true"
        android:theme="@style/ProgressBarStyle"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom"
        android:hint="@string/nome_do_usu_rio"
        android:singleLine="false"
        android:textColorHint="@color/white"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom"
        android:hint="@string/endereco_de_e_mail"
        android:singleLine="false"
        android:textColorHint="@color/white"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="bottom"
        android:singleLine="false"
        android:textColorHint="@color/white"
        android:theme="@style/TextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha_de_acesso"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/cadastrar" />

</LinearLayout>